CGE-31: fixed location card position on main menu, add transparent scroll to main-content class and overflow-y: auto

--- a/src/main/resources/react/src/pages/ProfilePage/profile.scss
+++ b/src/main/resources/react/src/pages/ProfilePage/profile.scss
@@ -14,19 +14,22 @@
     flex-direction: column;
     align-items: flex-end;
     width: 25%;
-    height: 100%;
+    height: auto;
     background-color: #ffffff;
     color: darken(rgba(173, 173, 173, 0.78),5%);
   }
   .main-content {
     background-color: $bg-content;
     width: calc(100% - 25%);
-    height: 100%;
-
+    height: 100vh;
+    overflow-y: auto;
 
     &-wrapper {
       max-width: 588px;
       padding-left: 40px;
     }
+  }
+  .main-content::-webkit-scrollbar {     
+    display: none; 
   }
 }
